--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="build">Build</string>
+    <string name="number">Enter number</string>
+    <string name="enter_text">Enter text</string>
+    <string name="name">Name:</string>
+    <string name="number_of_tasks">Number of tasks</string>
 </resources>
