--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="number_of_tasks">Number of tasks</string>
     <string name="task">Task:</string>
     <string name="state">State:</string>
+    <string name="add_task">Add task</string>
 </resources>
