--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="task">Task:</string>
     <string name="state">State:</string>
     <string name="add_task">Add task</string>
+    <string name="empty_list">Empty List</string>
 </resources>
