Transfer add button from TaskListFragment to TaskPagerActivity + NewTaskFragment: Add fragment and its layout for adding a new Task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="state">State:</string>
     <string name="add_task">Add task</string>
     <string name="empty_list">Empty List</string>
+    <string name="title">Title:</string>
+    <string name="date">Date:</string>
+    <string name="comments">Comments:</string>
 </resources>
